Fix: Corrección auth de vehículos con token